--- a/ansible/haproxy.cfg
+++ b/ansible/haproxy.cfg
@@ -40,14 +40,18 @@ frontend lesson4
   default_backend lesson4_backend_{{ blue_green_color }}
 
 backend lesson4_backend_blue
-  {% if blue_green_color != "blue" %}disabled{% endif %}
+  {% if blue_green_color != "blue" %}
+  disabled
+  {% endif %}
   balance roundrobin
   mode http
   server blue 3.68.110.82:80 check
 
 backend lesson4_backend_green
-  {% if blue_green_color != "green" %}disabled{% endif %}
+  {% if blue_green_color != "green" %}
+  disabled
+  {% endif %}
   balance roundrobin
   mode http
   server green 18.195.204.94:80 check
-  
+
